# spectral_sleuth

./: .gitignore  README.md  SPEC.md  pyproject.toml  render.yaml
backend/: .env.example  main.py  pyproject.toml
backend/data/: spectra.json
backend/quiz/: __init__.py  engine.py  library.py  schemas.py  tokens.py
backend/quiz/modes/: __init__.py  base.py  category_id.py  feature_spotting.py  multiple_choice.py
backend/tests/: test_endpoints.py  test_library.py  test_modes.py  test_tokens.py
contract/: api.md
data/: ingest_usgs.py  usgs_spectral_analysis.ipynb
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ExplanationPanel.tsx  HintOverlay.tsx  MagnifyingGlassHero.tsx  QuestionPanel.tsx  ScoreTracker.tsx  SpectrumChart.tsx
frontend/src/components/modes/: CategoryIDUI.tsx  FeatureSpottingUI.tsx  MultipleChoiceUI.tsx
frontend/src/components/ui/: AnswerChoice.tsx  PrimaryButton.tsx  ScoreStat.tsx
frontend/src/lib/: quizClient.ts  types.ts
frontend/src/pages/: Landing.tsx  Quiz.tsx  Results.tsx
