[project]
name = "spectral-sleuth"
version = "0.1.0"
description = "Imaging spectroscopy quiz app — backend + data tooling"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.4",
    "xarray>=2026.4.0",
    "hvplot>=0.12.2",
    "panel>=1.8.10",
    "bokeh>=3.9.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
